--- a/charts/consul/templates/connect-inject-clusterrole.yaml
+++ b/charts/consul/templates/connect-inject-clusterrole.yaml
@@ -13,8 +13,7 @@ metadata:
 rules:
 {{- if .Values.global.acls.manageSystemACLs }}
 - apiGroups: [ "" ]
-  resources:
-  - serviceaccounts
+  resources: ["serviceaccounts", "secrets"]
   verbs:
   - get
 {{- end }}
