api-gateway: configure ACL auth appropriately in secondary dc (#1462)
* api-gateway: configure acl-auth-method appropriately for controller in secondary dc

Co-Authored-By: Thomas Eckert <thomas.james.eckert@gmail.com>

* Add test coverage for secondary datacenter configuration

* Add changelog entry

* Improve changelog entry

* Fulfill flag dependencies for bats test

Co-authored-by: Thomas Eckert <thomas.james.eckert@gmail.com>

--- a/charts/consul/templates/api-gateway-controller-deployment.yaml
+++ b/charts/consul/templates/api-gateway-controller-deployment.yaml
@@ -204,7 +204,12 @@ spec:
         - |
           consul-k8s-control-plane acl-init \
             -component-name=api-gateway-controller \
+            {{- if and .Values.global.federation.enabled .Values.global.federation.primaryDatacenter }}
+            -acl-auth-method={{ template "consul.fullname" . }}-k8s-component-auth-method-{{ .Values.global.datacenter }} \
+            -primary-datacenter={{ .Values.global.federation.primaryDatacenter }} \
+            {{- else }}
             -acl-auth-method={{ template "consul.fullname" . }}-k8s-component-auth-method \
+            {{- end }}
             {{- if .Values.global.adminPartitions.enabled }}
             -partition={{ .Values.global.adminPartitions.name }} \
             {{- end }}
